# covid

dataingestion/: pyproject.toml
dataingestion/dataingestion/: ingestJson.py
dataingestion/tests/: test_dataingestion.py
