[tool.poetry]
name = "dataingestion"
version = "0.1.0"
description = ""
authors = ["Sumit Kumar <sk@test.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
